// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmButton /> should have loading state 1`] = `
<div
  class="component d-inline-block"
  id="1"
>
  <button
    class="loading btn-loading btn btn-secondary disabled"
    disabled=""
    id="confirm-button-1"
    type="button"
  />
</div>
`;

exports[`<ConfirmButton /> should match snapshot 1`] = `
<div
  class="component d-inline-block"
  id="1"
>
  <button
    class="btn btn-secondary"
    id="confirm-button-1"
    type="button"
  />
</div>
`;
